# ola

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  ola.sh  pyproject.toml
docker/: Dockerfile  NETWORK-POLICY.md  POLICY.md  build.sh
helper-scripts/: README.md  render_preview.py  test_live_render.py
src/ola/: __main__.py  cli.py  loop.py  plan.py  sandbox.py  stats.py
src/ola/agents/: DEFAULT-LOOP-PROMPT.md  NETWORK-POLICY.md  __init__.py  base.py  claude_code.py  openhands.py
src/ola/monitor/: __init__.py  __main__.py  cli.py  data.py  ui.py
src/oloopa/: __main__.py  cli.py  loop.py
src/oloopa/agents/: __init__.py  claude_code.py  openhands.py
tests/: test_claude_code.py  test_cli.py  test_loop.py  test_monitor_cli.py  test_monitor_data.py  test_monitor_ui.py  test_ola_sh.bash  test_ola_sh.bats  test_openhands.py  test_plan.py  test_sbx_integration.bash  test_sbx_integration.bats  test_stats.py
tests/proxy_test/: logging_proxy.py
