[project]
name = "oloopa"
version = "0.1.0"
description = "Outer Loop of Agents"
requires-python = ">=3.12"
dependencies = [
    "openhands-sdk>=1.14.0",
]

[project.scripts]
oloopa = "oloopa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oloopa"]
